# lu_decomp

./: CMakeLists.txt  create_mat.c  decomp_mat.c  import_mat.c  main.c  matrix.h  matrix_mult.c  print_mat.c  solve_mat.c
